--- a/Weitianshi/redPackets/pages/openedHB/openedHB.wxml
+++ b/Weitianshi/redPackets/pages/openedHB/openedHB.wxml
@@ -3,7 +3,7 @@
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <scroll-view scroll-y style="background:#f14b50;height:1200rpx;">
   <template is="openHB1" data="{{bg_hongbao2:bg_hongbao2,personInfo:personInfo}}"></template>
-  <view class="moreHB flex" wx:if="{{groupInfo}}">
+  <view class="moreHB flex" wx:if="{{groupInfo.length != 0}}">
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-right:16rpx;"></label>
     更多群红包
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-left:16rpx;"></label>
@@ -11,7 +11,7 @@
   <block wx:for="{{groupInfo}}" wx:key="{{index}}">
     <template is="groupBox" wx:if='{{index < 1}}' data="{{item:item}}"></template>
   </block> 
-  <view class="seeMore" bindtap='seeMore' wx:if="{{groupInfo.length>=1}}">查看更多</view>
+  <view class="seeMore" bindtap='seeMore' wx:if="{{groupInfo.length > 1}}">查看更多</view>
   <view class="HBrecordTitile flex">
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-right:16rpx;"></label>
     红包领取记录
