--- a/Weitianshi/pages/register/companyInfo/companyInfo.wxss
+++ b/Weitianshi/pages/register/companyInfo/companyInfo.wxss
@@ -51,6 +51,9 @@ input{
   text-align: left;
   padding: 32rpx;
   line-height: 40rpx;
+  position: fixed;
+  top: 0;
+  width: 91.46%;
 }
 
 .projectBoxContent {
