--- a/Weitianshi/redPackets/pages/myHB/myHB.wxml
+++ b/Weitianshi/redPackets/pages/myHB/myHB.wxml
@@ -37,7 +37,7 @@
 </scroll-view>
 
 
-<form report-submit='true' bindsubmit='formSubmit'>
+<form report-submit='true' bindsubmit='formSubmit' wx:if="{{packetStatus == 'SUCCESS'}}">
   <button form-type='submit' bindtap='createHB'>
     <image src="{{imgUrls2}}" class="btn1 floatBtn"  wx:if="{{bindContact == false}}"></image>
     <image src="{{openHover2}}" class="btn1 floatBtn"  wx:if="{{bindContact == true}}"></image>
