--- a/Weitianshi/pages/register/personInfo/personInfo.wxml
+++ b/Weitianshi/pages/register/personInfo/personInfo.wxml
@@ -3,11 +3,11 @@
   <view id="personInfo">
     <view class="registerPhone flex"> 
       <image src='/img/icon-shojji@2x.png' class="registerImg"></image>
-      <input class='telephoneText' placeholder="手机号" type="number" bindinput="checkPhone" bindconfirm="checkPhone" value="{{telphone}}" />
+      <input class='telephoneText' placeholder="手机号" type="number" bindinput="checkPhone" bindconfirm="checkPhone" value="{{telphone}}" placeholder-style='color:#999' />
     </view>
     <view class="registerNum flex">
       <image src='/img/icon-yanzhengma@2x.png' class="registerImg"></image>
-      <input placeholder="请输入验证码" type="number" value="{{checkCode}}" bindinput="checkCode2" class='telephoneText' />
+      <input placeholder="请输入验证码" type="number" value="{{checkCode}}" bindinput="checkCode2" class='telephoneText' placeholder-style='color:#999' />
       <button class="clear {{time=='1'?'clearOn':''}}" bindtap="checkCode" disabled="{{time==1}}" loading="{{checking==1}}">{{getCode}}</button>
     </view>
     <view class="btnBox">
