--- a/Weitianshi/common.wxss
+++ b/Weitianshi/common.wxss
@@ -22,6 +22,11 @@ button::after {
   background: white;
 }
 
+/* input{
+  padding-left:24rpx;
+  padding-right:24rpx;
+} */
+
 page {
   background-color: #f2f3f4;
   /*font-size: 16px;*/
