--- a/Weitianshi/redPackets/pages/publishHB/publishHB.wxss
+++ b/Weitianshi/redPackets/pages/publishHB/publishHB.wxss
@@ -25,21 +25,24 @@
 }
 
 .bagName {
-  width: 534rpx;
+  width: 510rpx;
   padding-left: 24rpx;
+  padding-right: 24rpx;
   margin-bottom: 16rpx;
 }
 
 .redBagMoney {
-  padding-left: 44rpx;
+  padding-left: 24rpx;
+  padding-right: 24rpx;
   width: 204rpx;
   margin-right: 62rpx;
 }
 
 .redBagNum {
   padding-right: 24rpx;
+  padding-left:24rpx;
   text-align: right;
-  width: 224rpx;
+  width: 200rpx;
 }
 
 .bagLeft, .bagRight {
@@ -68,19 +71,23 @@
   height: 360rpx;
   padding-top: 20rpx;
 }
-.rgInfoNum{
+
+.rgInfoNum {
   font-size: 44rpx;
   font-weight: bold;
 }
+
 .cardImg {
   height: 74rpx;
   width: 380rpx;
   margin-top: 46rpx;
   margin-bottom: 44rpx;
 }
-.rgInfo view{
+
+.rgInfo view {
   margin-bottom: 20rpx;
 }
+
 /*按钮  */
 
 .btn1 {
