--- a/Weitianshi/redPackets/resource/Template/Template.wxml
+++ b/Weitianshi/redPackets/resource/Template/Template.wxml
@@ -113,7 +113,8 @@
       </view>
       <view class="openEnd" wx:if="{{personInfo.packet.drawed_user.drawed_status == 2}}">很可惜，红包已派完</view>
       <view class="openEnd" wx:if="{{personInfo.packet.drawed_user.drawed_status == 3}}">红包已过期失效</view>
-      <view class="openMoney" wx:if="{{personInfo.packet.drawed_user.drawed_status == 1}}">￥
+      <view class="openMoney" wx:if="{{personInfo.packet.drawed_user.drawed_status == 1}}">
+        <label>￥</label>
         <label>{{personInfo.packet.drawed_user.drawed_money}}</label>
       </view>
       <!-- <view class="openSave">已存入微信零钱包</view> -->
