--- a/Weitianshi/pages/my/sharePage/sharePage.wxss
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxss
@@ -76,14 +76,16 @@
 }
 
 .getMoney {
-  font-size: 80rpx;
+  font-size: 72rpx;
   color: #e80d27;
   text-align: center;
   position: absolute;
   top: 470rpx;
-  /* left: 38.06%; */
-  margin-left: 35.06%;
   font-weight: bold;
+  width: 100%;
+  max-width: 522rpx;
+  margin-left: 16%;
+  z-index: 666;
 }
 
 button {
@@ -91,8 +93,9 @@ button {
 }
 
 .buttonnone {
-  background: none
+  background: none;
 }
+
 .getName {
   top: 734rpx;
   left: 252rpx;
