--- a/Weitianshi/redPackets/resource/Template/Template.wxml
+++ b/Weitianshi/redPackets/resource/Template/Template.wxml
@@ -62,6 +62,7 @@
 <template name="openHB">
   <view id="openHB">
     <image src="{{bg_hongbao2}}" class="openHB">
+      <view class="packetMoney">总额:￥{{personInfo.packet.money}}</view>
       <view class="openTitle">{{personInfo.packet.title}}</view>
       <image src="{{personInfo.user.avatarUrl}}" class="openImg" wx:if="{{personInfo.user.avatarUrl}}"></image>
       <image src="/img/img-touxiang@2x.png" class="openImg" wx:if="{{!personInfo.user.avatarUrl}}"></image>
@@ -93,6 +94,7 @@
 <template name="openHB1">
   <view id="openHB">
     <image src="{{bg_hongbao2}}" class="openHB">
+      <view class="packetMoney">总额:￥{{personInfo.packet.money}}</view>
       <view class="openTitle">{{personInfo.packet.title}}</view>
       <image src="{{personInfo.user.avatarUrl}}" class="openImg" wx:if="{{personInfo.user.avatarUrl}}" catchtap='toUserDetail' data-id="{{personInfo.user.user_id}}"></image>
       <image src="/img/img-touxiang@2x.png" class="openImg" wx:if="{{!personInfo.user.avatarUrl}}"></image>
@@ -114,8 +116,7 @@
       <view class="openEnd" wx:if="{{personInfo.packet.drawed_user.drawed_status == 2}}">很可惜，红包已派完</view>
       <view class="openEnd" wx:if="{{personInfo.packet.drawed_user.drawed_status == 3}}">红包已过期失效</view>
       <view class="openMoney" wx:if="{{personInfo.packet.drawed_user.drawed_status == 1}}">
-        <label>￥</label>
-        <label>{{personInfo.packet.drawed_user.drawed_money}}</label>
+        <label>￥{{personInfo.packet.drawed_user.drawed_money}}</label>
       </view>
       <!-- <view class="openSave">已存入微信零钱包</view> -->
       <view class="opentishi1">红包池：
